--- a/berimbau-center/style.css
+++ b/berimbau-center/style.css
@@ -3,6 +3,7 @@
     margin: 0;
 }
 
+
 li {
     padding: 10px;
     counter-reset: item;
@@ -17,6 +18,19 @@ body {
     background-color: rgba(231, 213, 112, 0.473);
 }
 /* Cabeçalho */
+
+@media screen and (max-width: 500px) {
+    #nav{
+        display: none;
+    }
+}
+
+@media screen and (min-width: 500px) {
+    #menu, #pesquisar{
+        display: none;
+    }
+}
+
 header {
     text-align: center;
     background-color: brown;
@@ -25,6 +39,28 @@ header {
 
 #logo {
     width: 60px;
+}
+
+#menu{
+    color: brown;
+    background-color: white;
+    position: absolute;
+    right: 10%;
+    top: 30px;
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 7px;
+}
+
+#pesquisar{
+    color: brown;
+    background-color: white;
+    position: absolute;
+    left: 10%;
+    top: 30px;
+    border: 1px solid;
+    border-radius: 10px;
+    padding: 7px;
 }
 
 header p {
@@ -47,10 +83,14 @@ header a:hover{
     transition-duration: 0.3s;
 }
 
-ol {
-    display: inline-flex;
+header ol {
+    display: flex;
     background-color: rgb(202, 55, 55);
     border-radius: 5px 5px 0px 0px;
+}
+
+header li {
+    margin: auto;
 }
 
 
@@ -62,6 +102,7 @@ main {
 }
 
 main img{
+    margin-top: 10px;
     width: 100%;
     max-width: 700px;
 }
@@ -70,18 +111,58 @@ section {
     background-color: white;
     max-width: 1200px;
     margin: auto;
-    margin-top: -3px;
-    padding: 10px;
+    margin-top: 10px;
     border-radius: 5px;
     text-align: center;
 }
 #container{
-    display: inline-flex;
-    text-align: justify;
+    display:;
+    margin: auto;
+    text-align: center;
 }
-.rows {
-    width: 200px;
-    margin: 10px;
+.conteudo {
+    margin: auto;
+    text-align: center;
+}
+
+@media screen and (max-width: 500px) {
+    .rows{
+        
+    }
+    #container img {
+        width: 90%;
+    }
+}
+@media screen and (min-width: 500px) {
+    .rows{
+        width: 200px;
+    }
+    #container img {
+        width: 200px;
+    }
+}
+
+.rows{
+    display: inline-block;
+    border: 1px solid rgba(0, 0, 0, 0.103);
+    border-radius: 6px;
+    padding: 5px;
+    margin: 5px;
+}
+
+#container img {
+    margin: auto;
+}
+
+.title_rows{
+    margin: 10px 0px 10px 0px;
+    text-decoration: underline;
+}
+
+.info_rows{
+    text-align: start;
+    text-indent: 15px;
+    margin: 10px 10px 10px 10px;
 }
 /* rodape */
 footer {
